--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,6 @@ test:
 
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   adapter: postgresql
   database: db/production.postgresql
